# ghcjs-ffi-skeleton

./: README.md  TAGS  ghcjs-ffi-skeleton.cabal
src/: Main.hs
